# raycast-project

./: CMakeLists.txt  Makefile  README.md  ambiant_occ.txt  config.txt  italy.txt  planets.txt
.github/workflows/: cmake.yaml  coding_style.yml  make_re.yml
boostrap/lib/primitives/: IPrimitive.cpp
boostrap/lib/primitives/sphere/: Sphere.hpp
boostrap/src/math/: Vector3D.cpp
config_files/: italy.txt  piano_test.txt  reflection.txt
documentation/: install.md
goyo_push/include/: Ray.hpp
goyo_push/lib/primitives/: APrimitive.hpp
include/: Client.hpp  Configuration.hpp  DLClass.hpp  INode.hpp  Image.hpp  Main.hpp  Point3D.hpp  RGB.hpp  Ray.hpp  Renderer.hpp  Server.hpp  Vector3D.hpp  main.hpp  parsing.hpp
include/math/: MatrixN.hpp  Point3D.hpp  Vector3D.hpp
include/utils/: mainMethods.hpp
includes/: Renderer.hpp  parsing.hpp
lib/primitives/: APrimitive.cpp  IPrimitive.hpp  Makefile
lib/primitives/sphere/: Makefile  Sphere.cpp
pallet/: nyx8.pal  pallet.pal
plugins/: Makefile
plugins/shapes/sphere/: Makefile
plugins/sphere/: Makefile  Sphere.hpp
src/: Main.cpp  main.cpp
src/cameras/: ACamera.cpp  ACamera.hpp  Camera.cpp  Camera.hpp  ICamera.hpp
src/cameras/base/: Camera.cpp  Camera.hpp
src/cameras/big_cam/: big_cam.cpp
src/lights/: ALight.cpp  ALight.hpp  ILight.hpp
src/lights/directional/: DirectionalLight.cpp  DirectionalLight.hpp
src/lights/point/: PointLight.cpp  PointLight.hpp
src/lights/point_light/: PointLight.cpp  PointLight.hpp
src/main/: main.cpp
src/main/manager/: pluginManager.cpp  pluginManager.hpp
src/main/parser/: Configuration.cpp  NodeBuilder.cpp  NodeBuilder.hpp  NodeFactory.hpp
src/main/pixelization/: Pixelize.cpp  Pixelize.hpp
src/main/renderer/: Renderer.cpp
src/materials/: AMaterial.cpp  AMaterial.hpp  IMaterial.hpp  Light.cpp  Light.hpp  Phong.cpp  Phong.hpp  PhongModel.cpp  PhongModel.hpp
src/materials/basic/: BasicMaterial.cpp  BasicMaterial.hpp  createBasicMaterial.cpp
src/materials/chessboard/: ChessMaterial.cpp  ChessMaterial.hpp
src/materials/glass/: GlassMaterial.cpp  GlassMaterial.hpp
src/materials/perlin/: PerlinMaterial.cpp  PerlinMaterial.hpp
src/materials/super/: SuperMaterial.cpp  SuperMaterial.hpp
src/materials/texture/: TextureMaterial.cpp  TextureMaterial.hpp
src/math/: Point3D.cpp  Vector3D.cpp
src/scenes/: AScene.cpp  AScene.hpp  IScene.hpp  Scene.cpp  Scene.hpp
src/scenes/base/: Scene.cpp  Scene.hpp  sceneCreate.cpp
src/shapes/: AShape.cpp  AShape.hpp  IShape.hpp  Makefile
src/shapes/cone/: Cone.cpp  Cone.hpp
src/shapes/cylinder/: Cylinder.cpp  Cylinder.hpp
src/shapes/object/: ObjTriangle.cpp  ObjTriangle.hpp  Object.cpp  Object.hpp  loadObjMaterials.cpp  loadObjMaterials.h
src/shapes/plane/: Makefile  Makefile.ex  Plane.cpp  Plane.hpp
src/shapes/sphere/: Makefile  Sphere.cpp  Sphere.hpp
src/shapes/triangle/: Triangle.cpp  Triangle.hpp  TriangleCreate.cpp
src/transformations/: ATransform.cpp  ATransform.hpp  ITransform.hpp  Transform.cpp  Transform.hpp
src/transformations/rotation/: Rotation.cpp  Rotation.hpp
src/transformations/scale/: Scale.cpp  Scale.hpp
src/transformations/translation/: Translation.cpp  Translation.hpp
src/utils/: ANode.cpp  ANode.hpp
tests/: Makefile  main.cpp  main.hpp
